# MiOS

./: .clinerules  .cursorrules  .editorconfig  .env.mios  .gitattributes  .gitignore  AGENTS.md  AGREEMENTS.md  AGY-TASKS.md  AI.md  API.md  ARCHITECTURE.md  AUDIT-FINDINGS-20260501-0032.md  AUDIT-FINDINGS-20260505.md  CLAUDE.AUDIT.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Containerfile  Containerfile.minimal  DEPLOY.md  ENGINEERING.md  FOUND-THE-FILES.tar  GEMINI.md  Get-MiOS.ps1  INDEX.md  INSTALL.md  Justfile  LICENSES.md  MiOS-Build-Scripts.md  MiOS-Engineering-Reference.md  MiOS-SBOM.csv  MiOS.md  README.md  ROADMAP.md  SECURITY.md  SELF-BUILD.md  SOURCES.md  SUMMARY.md  TASKS.md  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  install-root-overlay.sh
.github/: ai-instructions.md
automation/: 00-materialize-build-ctx.sh  01-repos.sh  02-kernel.sh  05-enable-external-repos.sh  08-system-files-overlay.sh  09-fonts.sh  10-gnome.sh  11-hardware.sh  12-virt.sh  13-ceph-k3s.sh  14-generate-quadlets.sh  15-render-quadlets.sh  16-bake-plan.sh  16-render-ports.sh  17-accounts-db.sh  18-apply-boot-fixes.sh  19-k3s-selinux.sh  20-fapolicyd-trust.sh  20-services.sh  21-moby-engine.sh  22-freeipa-client.sh  22-kargs-render.sh  23-uki-render.sh  24-chrony-render.sh  25-firewall-ports.sh  25-nut-render.sh  26-gnome-remote-desktop.sh  30-locale-theme.sh  31-user.sh  32-hostname.sh  33-firewall.sh  34-gpu-detect.sh  34-sshd-port.sh  35-gpu-passthrough.sh  35-gpu-pv-shim.sh  35-init-service.sh  36-akmod-guards.sh  36-tools.sh  37-aichat.sh  37-flatpak-env.sh  (+55 more)
etc/: chrony.conf  wsl.conf
powershell/: profile.ps1
research/: mesh-gradient-living-wallpaper-2026-07-06.md  multi-agent-orchestration-strategies-2026-07-05.md
specs/: Home.md  _Sidebar.md  llms.txt  manifest.json
tests/: drift-gate-negatives.sh  test-a2o-fallback.sh  test-directory-dispatch.sh  test-dispatcher-defense.py  test-ek-smart-extract.py  test-ek-substitution.py  test-expand-from.py  test-refine-guard.py  test-theme-merge.py  test-think-stripper.py
tools/: README.md  Xbox-AutoEnroll.xml  Xbox-Final-NoAutoSelect.xml  apply-final-config.sh  ascii-sweep.py  audit-image-provisioning.py  bibata-suite.sh  check-build-urls.sh  check-ovmf-enrollment.sh  check-resolver-twin.py  compile-dashboard-binary.py  compile-templates.py  configure-xbox-cpu.sh  find-ovmf-firmware.sh  fix-ovmf-enrollment.sh  install.sh  (+47 more)
tools/native/: Cargo.toml
tools/native/generate-names-registry/: Cargo.toml
tools/native/generate-names-registry/src/: main.rs
tools/native/mios-aiplane-lint/: Cargo.toml
tools/native/mios-aiplane-lint/src/: main.rs
tools/native/mios-ssot-walk/: Cargo.toml
tools/native/mios-ssot-walk/src/: lib.rs
tools/native/mios-version-check/: Cargo.toml
tools/native/mios-version-check/src/: main.rs
tools/native/mios-wallpaperd/: Cargo.toml
tools/native/mios-wallpaperd/src/: guiwatch.rs  host.rs  main.rs  workerw.rs
(+2073 files in other folders)
