# AI-hint: Rust workspace Cargo manifest for MiOS native tools. Version is SSOT-verified against mios.toml [meta].mios_version via check_version_ssot (Law 7/8).
[workspace]
members = [
    "mios-version-check",
    "mios-wallpaperd",
    "generate-names-registry",
    "mios-ssot-walk",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
